fixed signup off screen

--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -25,7 +25,7 @@
 }
 
 .signup.off {
-    transform: translateX(230%);
+    transform: translateX(350%);
 }
 
 .steps {
